--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,12 @@
 body {
     display: flex; 
     flex-direction: column;
-    border: 2px solid red;
     font-family: sans-serif;
+}
+
+.superscript {
+    vertical-align: super;
+    font-size: smaller;
 }
 
 /* /////////////////////////////Header///////////////////////////////// */
@@ -11,27 +15,25 @@ body {
 .header {
     display: flex;
     flex-direction: column;
-    align-items: space-between;
-    border: 2px solid red;
+    align-items: center;
     background-color: #1f2937;
     color: #f9faf8;
     min-height: 250px;
     gap: 50px;
+    padding: 20px;
 }
 
 /* Header Top */
 .header .top {
     display: flex;
-    border: 2px solid blue;
     justify-content: space-between;
     margin-left: 150px;
     margin-right: 150px;
-    min-width: 500px;
+    min-width: 1000px;
 }
 .header .top .left {
     display: flex;
     justify-content: flex-start;
-    border: 2px solid blue;
     font-size: 24px;
     font-weight: 700;
 }
@@ -39,28 +41,28 @@ body {
 .header .top .right {
     display: flex;
     justify-content: flex-end;
-    border: 2px solid blue;
     font-size: 18px;
     color: #e5e7eb; 
+    gap: 20px;
 }
 
 /* Header Bottom */
 .header .bottom {
     display: flex;
-    border: 2px solid blue;
-    justify-content: space-evenly;
+    justify-content: space-between;
     margin-left: 150px;
     margin-right: 150px;
+    margin-bottom: 50px;
+    max-width: 1000px;
     min-width: 500px;
 }
 .header .bottom .left {
     display: flex;
     flex-direction: column;
-    border: 2px solid blue;
-    width: 250px;
+    justify-content: center;
+    width: 500px;
     padding: 10px;
-    /* margin-left: 30px; */
-    
+    gap: 10px;
 }
 
 .header .bottom .left .title {
@@ -68,22 +70,28 @@ body {
     font-weight: 900;
 }
 
+.header .bottom .left .subtitle {
+    font-size: 18px;
+    color: #e5e7eb; 
+}
+
+.header .bottom .left .signup {
+    background-color: #3882f6;
+    color: white;
+    border-radius: 5px;
+    width: 100px;
+    height: 30px;
+    font-weight: 700;
+    text-align: center;
+}
+
 .header .bottom .right {
     display: flex;
-    border: 2px solid blue;
     padding: 30px;
-    /* margin-right: 50px;
-    margin-top: 30px;
-    margin-bottom: 30px; */
+    width: 500px;
 }
 
 /* //////////////////////////Content/////////////////////////////////// */
-
-.content {
-    border: 2px solid red;
-    /* display: flex;
-    flex-direction: column; */
-}
 
 /* Content Top */
 .content .top {
@@ -91,29 +99,35 @@ body {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    border: 2px solid blue;
     min-height: 250px;
+    height: 500px;
+}
+
+.content .top .title {
+    font-size: 36px;
+    font-weight: 900;
 }
 
  .content .top .boxes {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    border: 2px solid blue;
-    width: 500px;
-
+    width: 750px;
+    gap: 30px;
 }
 
 .content .top .boxes .boxwrap {
     display: flex;
     flex-direction: column;
     align-items: center; 
+    gap: 5px;
 }
 
 .content .top .boxes .boxwrap .box {
-    border: 2px solid green;
-    width: 75px;
-    height: 75px;
+    border: 4px solid #3882f6;
+    border-radius: 10px;
+    width: 150px;
+    height: 150px;
     flex-grow: 0;
     flex-shrink: 1;
 }
@@ -125,16 +139,29 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 2px solid blue;
-    min-height: 200px;
+    height: 500px;
 }
 
-.content .middle .text {
-    border: 2px solid blue;
+.content .middle .wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    min-width: 300px;
     margin-left: 250px;
     margin-right: 250px;
+    gap: 10px;
+}
+.content .middle .wrapper .text {
     min-width: 300px;
-    font-size: 22px;
+    font-size: 36px;
+    font-style: italic;
+    font-weight: lighter;
+    color: #1f2937;
+}   
+
+.content .middle .wrapper .subtext {
+    font-size: 26px;
+    font-weight: 700;
 }
 
 /* Content Bottom */
@@ -142,9 +169,9 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 2px solid blue;
     flex-direction: row;
     min-height: 200px;
+    height: 500px;
 }
 
 .content .bottom .popup {
@@ -152,16 +179,21 @@ body {
     display: flex;
     justify-items: space-evenly;
     align-items: center;
-    border: 2px solid blue;
+    border-radius: 5px;
     min-width: 300px;
     margin-left: 150px;
     margin-right: 150px;
-    padding: 20px;
-    gap: 20px;
+    padding: 45px;
+    gap: 50px;
 }
 
-.content .bottom .popup .text {
-    border: 2px solid green;
+.content .bottom .popup .wrapper .text {
+    color: white;
+    font-size: 26px;
+    font-weight: 700;
+}
+
+.content .bottom .popup .wrapper .subtext {
     color: white;
 }
 
@@ -170,9 +202,11 @@ body {
     border: 2px solid white;
     background-color: #3882f6;
     color: white;
+    font-size: 20px;
     flex-shrink: 0;
-    width: 100px;
-    height: 25px;
+    width: 125px;
+    height: 50px;
+    margin-right: 20px;
 }
 
 /* //////////////////////////Footer////////////////////////////////////// */
