Add Links Improve Style

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,13 @@
+html {
+    scroll-behavior: smooth;
+}
 
 body {
     display: flex; 
     flex-direction: column;
+    align-items: center;
     font-family: sans-serif;
+    margin: 0px;
 }
 
 .superscript {
@@ -10,11 +15,29 @@ body {
     font-size: smaller;
 }
 
-a:hover {
-    text-decoration: underline;
+.header a:hover {
+    /* text-decoration: underline; */
+    /* background-color: #324258; */
+    /* text-shadow: 2px 2px 1px #3882f6; */
+    font-weight: 550;
+    cursor: pointer;
+    
 }
 
-button:active {
+.header a {
+    text-decoration: none;
+    color: #e5e7eb; 
+}
+.boxwrap a:hover {
+    box-shadow: 2px 2px 1px rgb(148, 144, 144);
+    cursor: pointer;
+}
+
+button:hover {
+    cursor: pointer;
+}
+
+button:active, .boxwrap a:active {
     transform: translateY(2px);
 }
 
@@ -28,22 +51,22 @@ button:active {
     color: #f9faf8;
     min-height: 250px;
     gap: 50px;
-    padding: 20px;
+    width: 100%;
 }
 
 /* Header Top */
 .header .top {
     display: flex;
     justify-content: space-between;
-    margin-left: 150px;
-    margin-right: 150px;
-    min-width: 1000px;
+    width: 100%;
+    margin-top: 10px;
 }
 .header .top .left {
     display: flex;
     justify-content: flex-start;
     font-size: 24px;
     font-weight: 700;
+    margin-left: 20px;
 }
 
 .header .top .right {
@@ -52,25 +75,27 @@ button:active {
     font-size: 18px;
     color: #e5e7eb; 
     gap: 20px;
+    margin-right: 20px;
 }
 
 /* Header Bottom */
 .header .bottom {
     display: flex;
     justify-content: space-between;
-    margin-left: 150px;
-    margin-right: 150px;
+    margin-left: 100px;
+    margin-right: 100px;
     margin-bottom: 50px;
-    max-width: 1000px;
-    min-width: 500px;
+    max-width: 100%;
 }
 .header .bottom .left {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 500px;
+    width: 100%;
     padding: 10px;
     gap: 10px;
+    flex-grow: 1;
+    flex-shrink: 1;
 }
 
 .header .bottom .left .title {
@@ -87,8 +112,10 @@ button:active {
 .header .bottom .left .signup {
     background-color: #3882f6;
     color: white;
+    border: solid #3882f6;
     border-radius: 5px;
-    width: 100px;
+    min-width: 75px;
+    max-width: 100px;
     height: 30px;
     font-size: 16px;
     font-weight: 700;
@@ -97,11 +124,34 @@ button:active {
 
 .header .bottom .right {
     display: flex;
+    justify-content: center;
+    align-items: center;
     padding: 30px;
-    width: 500px;
+    width: 100%;
+    flex-grow: 1;
+    flex-shrink: 1;
+}
+
+.coco {
+    width: 30%;
+    height: auto;
+    flex-grow: 1;
+    flex-shrink: 1;
+    min-width: 200px;
+    max-width: 400px;
+
 }
 
 /* //////////////////////////Content/////////////////////////////////// */
+
+.content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-grow: auto;
+    flex-shrink: auto;
+    max-width: 100%;
+}
 
 /* Content Top */
 .content .top {
@@ -110,20 +160,23 @@ button:active {
     justify-content: space-evenly;
     align-items: center;
     min-height: 250px;
-    height: 500px;
+    height: 600px;
 }
 
 .content .top .title {
-    font-size: 36px;
+    font-size: 50px;
     font-weight: 900;
+    text-align: center;
 }
 
  .content .top .boxes {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    width: 750px;
+    width: 100%;
     gap: 30px;
+    flex-wrap: wrap;
+    gap: 60px;
 }
 
 .content .top .boxes .boxwrap {
@@ -139,16 +192,16 @@ button:active {
     align-items: center;
     border: 4px solid #3882f6;
     border-radius: 10px;
-    width: 150px;
-    height: 150px;
+    width: 175px;
+    height: 175px;
     flex-grow: 0;
     flex-shrink: 1;
 }
 
 .box img {
-    width: 145px;
-    height: 145px;
-    border-radius: 10px;
+    width: 175px;
+    height: 175px;
+    border-radius: 5px;
 }
 
 
@@ -158,7 +211,9 @@ button:active {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 500px;
+    max-height: 700px;
+    min-height: 400px;
+    width: 100%;
 }
 
 .content .middle .wrapper {
@@ -169,6 +224,8 @@ button:active {
     margin-left: 250px;
     margin-right: 250px;
     gap: 10px;
+    max-height: 600px;
+
 }
 .content .middle .wrapper .text {
     min-width: 300px;
@@ -191,6 +248,7 @@ button:active {
     flex-direction: row;
     min-height: 200px;
     height: 500px;
+    width: 100%;
 }
 
 .content .bottom .popup {
@@ -234,4 +292,5 @@ button:active {
     background-color: #1f2937;
     color: #f9faf8;
     text-align: center;
+    width: 100%;
 }
