--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,7 @@ button:active, .boxwrap a:active {
     gap: 10px;
     flex-grow: 1;
     flex-shrink: 1;
+    min-width: 200px;
 }
 
 .header .bottom .left .title {
@@ -211,8 +212,7 @@ button:active, .boxwrap a:active {
     display: flex;
     justify-content: center;
     align-items: center;
-    max-height: 700px;
-    min-height: 400px;
+    height: 450px;
     width: 100%;
 }
 
@@ -224,19 +224,17 @@ button:active, .boxwrap a:active {
     margin-left: 250px;
     margin-right: 250px;
     gap: 10px;
-    max-height: 600px;
-
 }
 .content .middle .wrapper .text {
     min-width: 300px;
-    font-size: 36px;
+    font-size: 33px;
     font-style: italic;
     font-weight: lighter;
     color: #1f2937;
 }   
 
 .content .middle .wrapper .subtext {
-    font-size: 26px;
+    font-size: 22px;
     font-weight: 700;
 }
 
@@ -257,11 +255,15 @@ button:active, .boxwrap a:active {
     justify-items: space-evenly;
     align-items: center;
     border-radius: 5px;
-    min-width: 300px;
+    min-width: 375px;
     margin-left: 150px;
     margin-right: 150px;
     padding: 45px;
     gap: 50px;
+}
+
+.content .bottom .popup .wrapper {
+    min-width: 200px;
 }
 
 .content .bottom .popup .wrapper .text {
