--- a/styles.css
+++ b/styles.css
@@ -87,6 +87,7 @@ button:active, .boxwrap a:active {
     margin-bottom: 50px;
     max-width: 100%;
     flex-wrap: wrap;
+    gap: 50px;
 }
 .header .bottom .left {
     display: flex;
@@ -104,6 +105,7 @@ button:active, .boxwrap a:active {
 .header .bottom .left .title {
     font-size: 48px;
     font-weight: 900;
+    margin-bottom: 15px;
 }
 
 .header .bottom .left .subtitle {
@@ -162,6 +164,7 @@ button:active, .boxwrap a:active {
     justify-content: space-evenly;
     align-items: center;
     min-height: 550px;
+    padding: 50px;
 }
 
 .content .top .title {
@@ -214,6 +217,7 @@ button:active, .boxwrap a:active {
     align-items: center;
     height: 450px;
     width: 100%;
+    padding: 25px;
 }
 
 .content .middle .wrapper {
