--- a/styles.css
+++ b/styles.css
@@ -164,7 +164,8 @@ button:active, .boxwrap a:active {
     justify-content: space-evenly;
     align-items: center;
     min-height: 550px;
-    padding: 50px;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 
 .content .top .title {
@@ -217,7 +218,8 @@ button:active, .boxwrap a:active {
     align-items: center;
     height: 450px;
     width: 100%;
-    padding: 25px;
+    padding-top: 25px;
+    padding-bottom: 25px;
 }
 
 .content .middle .wrapper {
